--- a/examples/shipyard-aws.yml
+++ b/examples/shipyard-aws.yml
@@ -102,6 +102,7 @@ jobs:
 
 properties:
   shipyard:
+    port: 8080
     host: 0.shipyard.default.<%= deployment_name %>.<%= tld %>
     db:
       host: 0.shipyard.default.<%= deployment_name %>.<%= tld %>
