Deploy jobs in serial

--- a/examples/shipyard-aws.yml
+++ b/examples/shipyard-aws.yml
@@ -70,6 +70,8 @@ resource_pools:
       version: latest
     cloud_properties:
       instance_type: m1.xlarge
+update:
+  serial: true
 
 jobs:
   - name: shipyard
