Replace old registration script

--- a/examples/shipyard-aws.yml
+++ b/examples/shipyard-aws.yml
@@ -93,6 +93,7 @@ jobs:
   - name: node
     templates:
       - name: docker
+      - name: register_engine
     instances: <%= num_nodes %>
     resource_pool: nodes
     networks:
