--- a/config/final.yml
+++ b/config/final.yml
@@ -1,9 +1,15 @@
 ---
-final_name: shipyard
 blobstore:
-  provider: s3
+  provider: local
   options:
-    bucket_name: shipyard-boshrelease
-    access_key_id: AKIAJPWUHOHV42IMTNQQ
-    secret_access_key: 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
-    encryption_key: cloudfoundry-community
+    blobstore_path: /tmp/shipyard-blobs
+final_name: shipyard-blobstore
+
+# final_name: shipyard
+# blobstore:
+#   provider: s3
+#   options:
+#     bucket_name: shipyard-boshrelease
+#     access_key_id: AKIAJPWUHOHV42IMTNQQ
+#     secret_access_key: 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
+#     encryption_key: cloudfoundry-community
